--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ body{
   align-items: center;
   gap: 20px;
 }
+@media(max-width: 991px){
+  .container{
+    flex-direction: column;
+  }
+}
 .container .box{
   display: flex;
   flex-direction: column;
